Use S3 methods to replace S4 methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,23 @@ S3method("[<-",JuliaObject)
 S3method("[[",JuliaObject)
 S3method("[[<-",JuliaObject)
 S3method("field<-",JuliaObject)
+S3method(Math,JuliaObject)
+S3method(Summary,JuliaObject)
 S3method(as.character,JuliaObject)
 S3method(as.double,JuliaObject)
 S3method(as.integer,JuliaObject)
 S3method(as.list,JuliaObject)
 S3method(as.logical,JuliaObject)
+S3method(ceiling,JuliaObject)
+S3method(cummax,JuliaObject)
+S3method(cummin,JuliaObject)
+S3method(cumprod,JuliaObject)
+S3method(cumsum,JuliaObject)
 S3method(field,JuliaObject)
 S3method(fields,JuliaObject)
 S3method(length,JuliaObject)
+S3method(round,JuliaObject)
+S3method(signif,JuliaObject)
 export("%>J%")
 export("field<-")
 export(JuliaObject)
@@ -42,14 +51,4 @@ exportMethods("%/%")
 exportMethods(Arith)
 exportMethods(Compare)
 exportMethods(Logic)
-exportMethods(Math)
-exportMethods(Summary)
-exportMethods(ceiling)
-exportMethods(cummax)
-exportMethods(cummin)
-exportMethods(cumprod)
-exportMethods(cumsum)
-exportMethods(round)
 exportMethods(show)
-exportMethods(signif)
-exportMethods(tanpi)
