--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,10 +21,10 @@ Encoding: UTF-8
 LazyData: true
 Imports: inline,
     utils,
-    R6
+    R6,
+    knitr
 RoxygenNote: 6.0.1
 SystemRequirements: Julia >= 0.5.0, RCall.jl
 Suggests: testthat,
-    knitr,
     rmarkdown
 VignetteBuilder: knitr
