--- a/.travis.yml
+++ b/.travis.yml
@@ -40,16 +40,14 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then wget -O /tmp/R.pkg "https://cran.rstudio.com/bin/macosx/$(wget -qO- https://cran.rstudio.com/bin/macosx/ | sed -n 's/.*href="\(R-[^"]*.pkg\)".*/\1/p' | head -n 1)"; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sudo installer -pkg /tmp/R.pkg -target /; fi
 
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then hdiutil unmount juliamnt; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then rm -rf juliamnt; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then rm -rf julia.dmg; fi
-
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then wget http://tug.org/cgi-bin/mactex-download/BasicTeX.pkg -O "/tmp/BasicTex.pkg"; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sudo installer -pkg "/tmp/BasicTex.pkg" -target / ; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then rm "/tmp/BasicTex.pkg"; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export PATH=/usr/texbin:/Library/TeX/texbin:$PATH; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sudo tlmgr update --self; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sudo tlmgr install inconsolata upquote courier courier-scaled helvetic; fi
+
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then rvm --default use 2.3.1; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install pandoc; fi
 
   - mkdir -p mkdir $HOME/R/library
