don't treat warnings as errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ addons:
     sources: [ 'ubuntu-toolchain-r-test']
     packages: ['libstdc++6']
 
+warnings_are_errors: false
+
 notifications:
   email: false
 
