--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,7 +75,7 @@ build_script:
 
 test_script:
 - R CMD build .
-- R CMD check *tar.gz
+- R CMD check *tar.gz --no-multiarch
 
 on_finish:
 # uncomment to enable RDP to Appveyor
