Correct NAMESPACE and treat warnings as errors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,9 @@ S3method("[[",JuliaObject)
 S3method("[[<-",JuliaObject)
 S3method("field<-",JuliaObject)
 S3method("|",JuliaObject)
+S3method(Math,JuliaObject)
+S3method(Ops,JuliaObject)
+S3method(Summary,JuliaObject)
 S3method(as.character,JuliaObject)
 S3method(as.double,JuliaObject)
 S3method(as.integer,JuliaObject)
@@ -27,9 +30,6 @@ S3method(signif,JuliaObject)
 export("%>J%")
 export("field<-")
 export(JuliaObject)
-export(Math.JuliaObject)
-export(Ops.JuliaObject)
-export(Summary.JuliaObject)
 export(eng_juliacall)
 export(field)
 export(fields)
