Do the juliacall_depedency thing only for the first time. Save time in `julia_setup()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(julia_library)
 export(julia_setup)
 export(julia_source)
 export(julia_update_package)
+export(juliacall_dependency)
 export(plotsViewer)
 import(R6)
 import(Rcpp)
