--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 0.12.0.9000
 Date: 2017-11-27
 Authors@R: c(
     person("Changcheng", "Li", , "cxl508@psu.edu", c("aut", "cre")),
-    person("Randy", "Lai", role = "ctb")
+    person("Randy", "Lai", role = "ctb"),
+    person("Dmitri", "Grominski", role = "ctb")
     )
 Description: Provides an R interface to 'Julia',
     which is a high-level, high-performance dynamic programming language
