--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(signif,JuliaObject)
 export("%>J%")
 export("field<-")
 export(JuliaObject)
+export(autowrap)
 export(eng_juliacall)
 export(field)
 export(fields)
