--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,11 @@
+pandoc: 2.1.1
+pkgdown: 0.1.0.9000
+pkgdown_sha: cfc0f1dbfd535cfad839cc90cd1c41d3c9db26a7
+articles:
+  JuliaCall_in_Jupyter_R_Notebook: JuliaCall_in_Jupyter_R_Notebook.html
+  Julia_in_RMarkdown: Julia_in_RMarkdown.html
+  mandelbrot: mandelbrot.html
 urls:
   reference: https://non-contradiction.github.io/JuliaCall//reference
   article: https://non-contradiction.github.io/JuliaCall//articles
-articles:
-  Julia_in_RMarkdown: Julia_in_RMarkdown.html
-  JuliaCall_in_Jupyter_R_Notebook: JuliaCall_in_Jupyter_R_Notebook.html
-  mandelbrot: mandelbrot.html
 
