--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(cumsum,JuliaObject)
 S3method(field,JuliaObject)
 S3method(fields,JuliaObject)
 S3method(length,JuliaObject)
+S3method(rep,JuliaObject)
 S3method(round,JuliaObject)
 S3method(signif,JuliaObject)
 export("%>J%")
@@ -52,6 +53,7 @@ export(julia_setup)
 export(julia_source)
 export(julia_update_package)
 export(plotsViewer)
+export(unlist.JuliaObject)
 import(R6)
 import(Rcpp)
 useDynLib(JuliaCall)
