Experimental JuliaPlain idea to  alleviate the problem that most R dispatching methods only work for the first argument.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ S3method("%/%",JuliaObject)
 S3method("&",JuliaObject)
 S3method("[",JuliaObject)
 S3method("[<-",JuliaObject)
+S3method("[<-",JuliaPlain)
 S3method("[[",JuliaObject)
 S3method("[[<-",JuliaObject)
+S3method("[[<-",JuliaPlain)
 S3method("field<-",JuliaObject)
 S3method("|",JuliaObject)
 S3method(Math,JuliaObject)
@@ -18,6 +20,7 @@ S3method(as.double,JuliaObject)
 S3method(as.integer,JuliaObject)
 S3method(as.list,JuliaObject)
 S3method(as.logical,JuliaObject)
+S3method(as.logical,JuliaPlain)
 S3method(ceiling,JuliaObject)
 S3method(cummax,JuliaObject)
 S3method(cummin,JuliaObject)
@@ -27,6 +30,7 @@ S3method(field,JuliaObject)
 S3method(fields,JuliaObject)
 S3method(length,JuliaObject)
 S3method(rep,JuliaObject)
+S3method(rep,JuliaPlain)
 S3method(round,JuliaObject)
 S3method(signif,JuliaObject)
 export("%>J%")
