Implementation of generic for mean, determinant and solve.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,16 +26,19 @@ S3method(cummax,JuliaObject)
 S3method(cummin,JuliaObject)
 S3method(cumprod,JuliaObject)
 S3method(cumsum,JuliaObject)
+S3method(determinant,JuliaObject)
 S3method(dim,JuliaObject)
 S3method(field,JuliaObject)
 S3method(fields,JuliaObject)
 S3method(is.array,JuliaObject)
 S3method(is.matrix,JuliaObject)
 S3method(length,JuliaObject)
+S3method(mean,JuliaObject)
 S3method(rep,JuliaObject)
 S3method(rep,JuliaPlain)
 S3method(round,JuliaObject)
 S3method(signif,JuliaObject)
+S3method(solve,JuliaObject)
 export("%>J%")
 export("field<-")
 export(JuliaObject)
