--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ S3method(as.integer,JuliaObject)
 S3method(as.list,JuliaObject)
 S3method(as.logical,JuliaObject)
 S3method(as.logical,JuliaPlain)
+S3method(c,JuliaObject)
 S3method(ceiling,JuliaObject)
 S3method(cummax,JuliaObject)
 S3method(cummin,JuliaObject)
