Implementation of t.JuliaObject.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ S3method(rep,JuliaPlain)
 S3method(round,JuliaObject)
 S3method(signif,JuliaObject)
 S3method(solve,JuliaObject)
+S3method(t,JuliaObject)
 export("%>J%")
 export("field<-")
 export(JuliaObject)
