as.vector and dim<- for JuliaObject.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method("[<-",JuliaPlain)
 S3method("[[",JuliaObject)
 S3method("[[<-",JuliaObject)
 S3method("[[<-",JuliaPlain)
+S3method("dim<-",JuliaObject)
 S3method("field<-",JuliaObject)
 S3method("|",JuliaObject)
 S3method(Math,JuliaObject)
@@ -21,6 +22,7 @@ S3method(as.integer,JuliaObject)
 S3method(as.list,JuliaObject)
 S3method(as.logical,JuliaObject)
 S3method(as.logical,JuliaPlain)
+S3method(as.vector,JuliaObject)
 S3method(c,JuliaObject)
 S3method(ceiling,JuliaObject)
 S3method(cummax,JuliaObject)
