aperm for JuliaObject.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method("|",JuliaObject)
 S3method(Math,JuliaObject)
 S3method(Ops,JuliaObject)
 S3method(Summary,JuliaObject)
+S3method(aperm,JuliaObject)
 S3method(as.character,JuliaObject)
 S3method(as.double,JuliaObject)
 S3method(as.integer,JuliaObject)
