More "correct" implementation of max for JuliaObject.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ S3method(fields,JuliaObject)
 S3method(is.array,JuliaObject)
 S3method(is.matrix,JuliaObject)
 S3method(length,JuliaObject)
+S3method(max,JuliaObject)
 S3method(mean,JuliaObject)
 S3method(rep,JuliaObject)
 S3method(rep,JuliaPlain)
