Have the `is.numeric` generics for `JuliaObject`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(field,JuliaObject)
 S3method(fields,JuliaObject)
 S3method(is.array,JuliaObject)
 S3method(is.matrix,JuliaObject)
+S3method(is.numeric,JuliaObject)
 S3method(length,JuliaObject)
 S3method(max,JuliaObject)
 S3method(mean,JuliaObject)
