Temporarily define is.double the same as is.numeric for JuliaObject.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(autowrap)
 export(eng_juliacall)
 export(field)
 export(fields)
+export(is.double.JuliaObject)
 export(julia_assign)
 export(julia_call)
 export(julia_check)
