--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ S3method(is.numeric,JuliaObject)
 S3method(length,JuliaObject)
 S3method(max,JuliaObject)
 S3method(mean,JuliaObject)
+S3method(print,JuliaObject)
 S3method(rep,JuliaObject)
 S3method(rep,JuliaPlain)
 S3method(round,JuliaObject)
