Implement diff.JuliaObject.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(cummin,JuliaObject)
 S3method(cumprod,JuliaObject)
 S3method(cumsum,JuliaObject)
 S3method(determinant,JuliaObject)
+S3method(diff,JuliaObject)
 S3method(dim,JuliaObject)
 S3method(field,JuliaObject)
 S3method(fields,JuliaObject)
