--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,13 @@ notifications:
 before_install:
   - mkdir -p ~/Downloads
 
-  - if [ "$TRAVIS_OS_NAME" == "linux" && $JULIA == "06" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/0.6/julia-0.6.4-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" && $JULIA == "07" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/0.7/julia-0.7.0-beta2-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "06" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/0.6/julia-0.6.4-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "07" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/0.7/julia-0.7.0-beta2-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then tar xzf "$HOME/Downloads/julia.tar.gz" -C "$HOME/Downloads"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then cp -r "$(find "$HOME/Downloads" -maxdepth 2 -name "julia*" -type d | head -n 1)" "$HOME/julia"; fi
 
-  - if [ "$TRAVIS_OS_NAME" == "osx" && $JULIA == "06" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/0.6/julia-0.6.4-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" && $JULIA == "07" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/0.7/julia-0.7.0-beta2-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "06" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/0.6/julia-0.6.4-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "07" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/0.7/julia-0.7.0-beta2-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then hdiutil attach ~/Downloads/julia.dmg; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then cp -r /Volumes/Julia*/Julia*/Contents/Resources/julia $HOME/julia; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then hdiutil detach -force /Volumes/Julia*; fi
