Need to use add instead of dev to get the master of RCall.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ before_install:
   - export PATH="$HOME/julia/bin:$PATH"
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export R_LD_LIBRARY_PATH="$(R RHOME)/lib:$HOME/julia/lib/julia"; fi
 
-  - if [ $JULIA == "07" ]; then julia -e 'using Pkg; pkg"dev RCall#master"'; fi
+  - if [ $JULIA == "07" ]; then julia -e 'using Pkg; pkg"add RCall#master"'; fi
