Temporarily move the RCall version requirement on julia v0.7 into the install script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 matrix:
   allow_failures:
     - os: linux
-    - env: JULIA="07"
+      env: JULIA="07"
 
 addons:
   apt:
@@ -36,5 +36,3 @@ before_install:
   - rm -rf ~/Downloads/julia*
   - export PATH="$HOME/julia/bin:$PATH"
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export R_LD_LIBRARY_PATH="$(R RHOME)/lib:$HOME/julia/lib/julia"; fi
-
-  - if [ $JULIA == "07" ]; then julia -e 'using Pkg; pkg"add RCall#e59a546"'; fi
