--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,6 @@ before_install:
   - export PATH="$HOME/julia/bin:$PATH"
   
   - if [ $JULIA == "07" ]; then julia -e 'using Pkg; pkg"add DataFrames#56a9b72"'; fi
+  - if [ $JULIA == "07" ]; then julia -e 'using Pkg; pkg"add CategoricalArrays#8738b20"'; fi
   
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export R_LD_LIBRARY_PATH="$(R RHOME)/lib:$HOME/julia/lib/julia"; fi
