Not allowing failures on julia 0.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ os:
 env:
   - JULIA="06"
   - JULIA="07"
-matrix:
-  allow_failures:
-    - env: JULIA="07"
+# matrix:
+#   allow_failures:
+#     - env: JULIA="07"
 
 addons:
   apt:
