--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,8 @@ environment:
     R_URL: "https://cran.rstudio.com/bin/windows/base/R-devel-win.exe"
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.7/julia-0.7.0-win64.exe"
     R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.5.1-win.exe"
+  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.0/julia-1.0.0-win64.exe"
+    R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.5.1-win.exe"
 
 notifications:
   - provider: Email
@@ -72,6 +74,8 @@ build_script:
 - Rscript -e "install.packages(\"testthat\", repos=\"http://cran.rstudio.com/\")"
 - Rscript -e "install.packages(\"knitr\", repos=\"http://cran.rstudio.com/\")"
 - Rscript -e "install.packages(\"rmarkdown\", repos=\"http://cran.rstudio.com/\")"
+
+- julia -e "if VERSION >= v\"1.0.0\" using Pkg; end; @static if VERSION >= v\"1.0.0\" pkg\"add RCall#master\" end;"
 
 test_script:
 - R CMD build .
