--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,7 +75,7 @@ build_script:
 - Rscript -e "install.packages(\"knitr\", repos=\"http://cran.rstudio.com/\")"
 - Rscript -e "install.packages(\"rmarkdown\", repos=\"http://cran.rstudio.com/\")"
 
-- julia -e "if VERSION >= v\"1.0.0\" using Pkg; end; @static if VERSION >= v\"1.0.0\" pkg\"add RCall#master\" end;"
+# - julia -e "if VERSION >= v\"1.0.0\" using Pkg; end; @static if VERSION >= v\"1.0.0\" pkg\"add RCall#master\" end;"
 
 test_script:
 - R CMD build .
