--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
     R_URL: "https://cran.rstudio.com/bin/windows/base/R-devel-win.exe"
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.7/julia-0.7.0-win64.exe"
     R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.5.1-win.exe"
-  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.0/julia-1.0.2-win64.exe"
+  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.0/julia-1.0-latest-win64.exe"
     R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.5.1-win.exe"
 
 notifications:
