--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,6 @@ before_install:
   - rm -rf ~/Downloads/julia*
   - export PATH="$HOME/julia/bin:$PATH"
 
-  # - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export R_LD_LIBRARY_PATH="$(R RHOME)/lib:$HOME/julia/lib/julia"; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export R_LD_LIBRARY_PATH="$(R RHOME)/lib:$HOME/julia/lib/julia"; fi
 
   # - if [ $JULIA == "10" ]; then julia -e 'using Pkg; pkg"add RCall#master"'; fi
