--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,6 @@ NeedsCompilation: yes
 ByteCompile: yes
 SystemRequirements: Julia >= 0.6.0, RCall.jl
 Suggests: testthat,
-    knitr,
+    knitr (>= 1.18),
     rmarkdown
 VignetteBuilder: knitr
