--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   - JULIA="06"
   - JULIA="07"
   - JULIA="10"
+  - JULIA="11"
 
 addons:
   apt:
@@ -22,6 +23,7 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "06" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/0.6/julia-0.6.4-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "07" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/0.7/julia-0.7.0-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "10" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.0/julia-1.0-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ $JULIA == "11" ]; then curl -L https://julialang-s3.julialang.org/bin/linux/x64/1.1/julia-1.1-latest-linux-x86_64.tar.gz -o "$HOME/Downloads/julia.tar.gz"; fi
 
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then tar xzf "$HOME/Downloads/julia.tar.gz" -C "$HOME/Downloads"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then cp -r "$(find "$HOME/Downloads" -maxdepth 2 -name "julia*" -type d | head -n 1)" "$HOME/julia"; fi
@@ -29,6 +31,7 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "06" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/0.6/julia-0.6.4-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "07" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/0.7/julia-0.7.0-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "10" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/1.0/julia-1.0-latest-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ] && [ $JULIA == "11" ]; then curl -L https://julialang-s3.julialang.org/bin/mac/x64/1.1/julia-1.1-latest-mac64.dmg -o "$HOME/Downloads/julia.dmg"; fi
 
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then hdiutil attach ~/Downloads/julia.dmg; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then cp -r /Volumes/Julia*/Julia*/Contents/Resources/julia $HOME/julia; fi
