Fix issue of julia_command display in R chunk caused by commit 17d3cec.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(julia_library)
 export(julia_setup)
 export(julia_source)
 export(julia_update_package)
+export(knit_print.JuliaOutput)
 export(plotsViewer)
 import(Rcpp)
 useDynLib(JuliaCall)
