--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ S3method(fields,JuliaObject)
 S3method(is.array,JuliaObject)
 S3method(is.matrix,JuliaObject)
 S3method(is.numeric,JuliaObject)
+S3method(knit_print,JuliaOutput)
 S3method(length,JuliaObject)
 S3method(max,JuliaObject)
 S3method(mean,JuliaObject)
@@ -70,7 +71,7 @@ export(julia_library)
 export(julia_setup)
 export(julia_source)
 export(julia_update_package)
-export(knit_print.JuliaOutput)
 export(plotsViewer)
 import(Rcpp)
+importFrom(knitr,knit_print)
 useDynLib(JuliaCall)
