Add code_of_conduct and contributing guide, related to #89. [skip ci]

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,5 @@
+^\.github$
+^CODE_OF_CONDUCT\.md$
 ^CRAN-RELEASE$
 ^.*\.Rproj$
 ^\.Rproj\.user$
@@ -15,3 +17,4 @@
 ^revdep$
 ^paper$
 ^LICENSE\.md$
+^contributing\.md$
