--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ environment:
     R_URL: "https://cran.rstudio.com/bin/windows/base/R-devel-win.exe"
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.1/julia-1.1-latest-win64.exe"
     R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.6.0-win.exe"
+  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.2/julia-1.2-latest-win64.exe"
+    R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.6.0-win.exe"
 
 notifications:
   - provider: Email
