Another try for miktex.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,8 +48,8 @@ install:
   - ps: (new-object net.webclient).DownloadFile(
       "http://mirrors.ctan.org/systems/win32/miktex/setup/windows-x86/portable-miktex.exe",
       "C:\projects\miktex-portable.exe")
-  - C:\projects\miktex-portable.exe --unattended --auto-install=yes
-  # - set "PATH=%PATH%;c:\miktex\texmfs\install\miktex\bin"
+  - C:\projects\miktex-portable.exe --unattended --auto-install=yes --portable=c:\miktex
+  - set "PATH=%PATH%;c:\miktex\texmfs\install\miktex\bin\x64"
   # autoinstall latex packages (0=no, 1=autoinstall, 2=ask)
   # this adds this to the registry!
   # - initexmf --set-config-value "[MPM]AutoInstall=1"
