--- a/appveyor.yml
+++ b/appveyor.yml
@@ -58,7 +58,7 @@ install:
   
   # Use tinytex for latex
   
-  - Rscript -e "install.packages('tinytex'); tinytex::install_tinytex(); tinytex:::install_yihui_pkgs()"
+  - Rscript -e "install.packages('tinytex', repos='http://cran.rstudio.com/'); tinytex::install_tinytex(); tinytex:::install_yihui_pkgs()"
 
   # Download and install Rtools
 
