--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,6 +59,7 @@ install:
   # Use tinytex for latex
   
   - Rscript -e "install.packages('tinytex', repos='http://cran.rstudio.com/'); tinytex::install_tinytex(); tinytex:::install_yihui_pkgs()"
+  - set PATH=C:\Users\appveyor\AppData\Roaming/TinyTeX;%PATH%
 
   # Download and install Rtools
 
