--- a/appveyor.yml
+++ b/appveyor.yml
@@ -58,8 +58,8 @@ install:
   
   # Use tinytex for latex
   
-  - Rscript -e "install.packages('tinytex', repos='http://cran.rstudio.com/'); tinytex::install_tinytex(); tinytex:::install_yihui_pkgs()"
-  - set PATH=C:\Users\appveyor\AppData\Roaming/TinyTeX;%PATH%
+  - Rscript -e "install.packages('tinytex', repos='http://cran.rstudio.com/'); tinytex::install_tinytex(force=TRUE); tinytex:::install_yihui_pkgs()"
+  - set PATH=%APPDATA%\\TinyTeX\\bin\\win32;%PATH%
 
   # Download and install Rtools
 
