Export and documentation of pkg wrap functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,11 +63,14 @@ export(julia_console)
 export(julia_do.call)
 export(julia_eval)
 export(julia_exists)
+export(julia_function)
 export(julia_help)
 export(julia_install_package)
 export(julia_install_package_if_needed)
 export(julia_installed_package)
 export(julia_library)
+export(julia_pkg_hook)
+export(julia_pkg_import)
 export(julia_setup)
 export(julia_source)
 export(julia_update_package)
