--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 *.d
 *.dll
 inst/doc
-/revdep/.cache.rds
+/revdep/checks
+/revdep/library
 /revdep/checks.noindex
 /revdep/library.noindex
+/revdep/data.sqlite
+/revdep/*.html
