Use julia_markdown_setup instead of julia_notebook_setup, related to #98 and #123

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(julia_install_package)
 export(julia_install_package_if_needed)
 export(julia_installed_package)
 export(julia_library)
+export(julia_markdown_setup)
 export(julia_notebook_setup)
 export(julia_pkg_hook)
 export(julia_pkg_import)
