--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,5 +78,6 @@ export(julia_source)
 export(julia_update_package)
 export(plotsViewer)
 import(Rcpp)
+import(mime)
 importFrom(knitr,knit_print)
 useDynLib(JuliaCall)
