--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,5 +32,6 @@ NeedsCompilation: yes
 ByteCompile: yes
 SystemRequirements: Julia >= 0.6.0, RCall.jl
 Suggests: testthat,
-    rmarkdown
+    rmarkdown,
+    rappdirs
 VignetteBuilder: knitr
