--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(autowrap)
 export(eng_juliacall)
 export(field)
 export(fields)
+export(install_julia)
 export(julia_assign)
 export(julia_call)
 export(julia_command)
