--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ os:
   - linux
   - osx
 env:
-  - JULIA_HOME=/tmp/julia
+  - JULIA_HOME=/tmp/julia/v1.5.0/bin
 addons:
   apt:
     sources: ['ubuntu-toolchain-r-test']
     packages: ['libstdc++6']
 before_script:
   - Rscript -e 'install.packages("devtools")'
-  - Rscript -e 'library(devtools); devtools::load_all("."); library(JuliaCall); JuliaCall::install_julia(Sys.getenv("JULIA_HOME"))'
+  - Rscript -e 'library(devtools); devtools::load_all("."); library(JuliaCall); JuliaCall::install_julia("/tmp/julia")'
 notifications:
   email: false
