--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ environment:
   NOT_CRAN: "true"
   R_URL: "https://cran.rstudio.com/bin/windows/base/R-4.0.2-win.exe"
   _R_CHECK_FORCE_SUGGESTS_: "false"
+  JULIA_HOME: "/tmp/julia/v1.5.0/bin"
 
 notifications:
   - provider: Email
@@ -47,7 +48,7 @@ install:
   # - C:\projects\rtools.exe /S /D=C:\Rtools
   - C:\projects\rtools.exe /VERYSILENT /DIR=C:\Rtools
 
-  - set PATH=c:\Rtools\bin;c:\Rtools\gcc-4.6.3\bin;%PATH%
+  - Rscript -e "writeLines('PATH=`"${RTOOLS40_HOME}\\usr\\bin;${PATH}`"', con = '~/.Renviron')"
 
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
@@ -65,10 +66,14 @@ build_script:
 - Rscript -e "install.packages(\"rmarkdown\", repos=\"http://cran.rstudio.com/\")"
 - Rscript -e "install.packages(\"Rcpp\", repos=\"http://cran.rstudio.com/\")"
 
+# Install Julia
+- Rscript -e 'install.packages("devtools")'
+- Rscript -e 'library(devtools); devtools::load_all("."); library(JuliaCall); JuliaCall::install_julia("/tmp/julia")'
+
 test_script:
 - R CMD build .
 - R CMD check *tar.gz --no-multiarch
 
 on_finish:
 # uncomment to enable RDP to Appveyor
-# - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
