--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,11 +53,11 @@ build_script:
 - rm -rf vignettes
 - Rscript -e "d <- read.dcf('DESCRIPTION'); d[, colnames(d) == 'VignetteBuilder'] <- NA; write.dcf(d, 'DESCRIPTION')"
 
-- Rscript -e "sessionInfo()"
-- Rscript -e "install.packages(\"testthat\", repos=\"http://cran.rstudio.com/\")"
-- Rscript -e "install.packages(\"knitr\", repos=\"http://cran.rstudio.com/\")"
-- Rscript -e "install.packages(\"rmarkdown\", repos=\"http://cran.rstudio.com/\")"
-- Rscript -e "install.packages(\"Rcpp\", repos=\"http://cran.rstudio.com/\")"
+- Rscript -e 'sessionInfo()'
+- Rscript -e 'install.packages("testthat", repos="http://cran.rstudio.com/")'
+- Rscript -e 'install.packages("knitr", repos="http://cran.rstudio.com/")'
+- Rscript -e 'install.packages("rmarkdown", repos="http://cran.rstudio.com/")'
+- Rscript -e 'install.packages("Rcpp", repos="http://cran.rstudio.com/")'
 
 # Install Julia
 - Rscript -e 'install.packages("devtools")'
