--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,24 +49,17 @@ install:
   - set PATH=C:\Rtools\usr\bin;%PATH%
 
 build_script:
-# Not build vignettes
-- rm -rf vignettes
-- Rscript -e "d <- read.dcf('DESCRIPTION'); d[, colnames(d) == 'VignetteBuilder'] <- NA; write.dcf(d, 'DESCRIPTION')"
-
-- Rscript -e 'sessionInfo()'
-- Rscript -e 'install.packages("testthat", repos="http://cran.rstudio.com/")'
-- Rscript -e 'install.packages("knitr", repos="http://cran.rstudio.com/")'
-- Rscript -e 'install.packages("rmarkdown", repos="http://cran.rstudio.com/")'
-- Rscript -e 'install.packages("Rcpp", repos="http://cran.rstudio.com/")'
-
-# Install Julia
-- Rscript -e 'install.packages("devtools")'
-- Rscript -e 'library(devtools); devtools::load_all("."); library(JuliaCall); JuliaCall::install_julia("C:\\projects\\julia")'
+  - rm -rf vignettes
+  - ps: |
+      Rscript -e "d <- read.dcf('DESCRIPTION'); d[, colnames(d) == 'VignetteBuilder'] <- NA; write.dcf(d, 'DESCRIPTION')"
+      Rscript -e 'sessionInfo()'
+      Rscript -e 'install.packages("testthat", "knitr", "rmarkdown", "Rcpp", "devtools", repos="http://cran.rstudio.com/")'
+      Rscript -e 'library(devtools); devtools::load_all("."); library(JuliaCall); JuliaCall::install_julia("C:\\projects\\julia")'
 
 test_script:
-- R CMD build .
-- R CMD check *tar.gz --no-multiarch
+  - R CMD build .
+  - R CMD check *tar.gz --no-multiarch
 
 on_finish:
-# uncomment to enable RDP to Appveyor
-- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  # uncomment to enable RDP to Appveyor
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
