--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,4 +61,4 @@ test_script:
 
 on_finish:
   # uncomment to enable RDP to Appveyor
-  # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
