--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,7 @@ jobs:
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
+      JULIA_HOME: /tmp/julia/v1.5.0/bin
 
     steps:
       - uses: actions/checkout@v2
@@ -58,6 +59,15 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
+        shell: Rscript {0}
+
+      - name: Install Julia
+        run: |
+          install.packages("devtools")
+          library(devtools)
+          devtools::load_all(".")
+          library(JuliaCall)
+          JuliaCall::install_julia("/tmp/julia")
         shell: Rscript {0}
 
       - name: Check
