--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -70,6 +70,11 @@ jobs:
           JuliaCall::install_julia("/tmp/julia")
         shell: Rscript {0}
 
+      - name: Set Julia on PATH on Windows
+        if: runner.os == 'Windows'
+        run: |
+          echo "/tmp/julia" >> $GITHUB_PATH
+
       - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
