--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Set Julia on PATH on Windows
         if: runner.os == 'Windows'
         run: |
-          echo "/tmp/julia" >> $GITHUB_PATH
+          echo "/tmp/julia/v1.5.0/bin" >> $GITHUB_PATH
 
       - name: Check
         env:
